# glimmer-cism-glimmer

./: AUTHORS  COMPILE  COPYRIGHT  ChangeLog  INSTALL  Makefile  Makefile.am  NEWS  README  bootstrap  config.inc.in  configure.in  glimmer-config.in  makefile.arc  makefile.ifc  makefile.ifort  makefile.nag  makefile.sunws
data/: example.glp  g20lati  g20prcp  g20relx  g20surf  g20thck  g20topg  g_land.config  g_land.gli  g_land.gln  g_land.glw  largescale.orog  latitudes.txt  longitudes.txt
data/fennscan/: fennscan1.config  mb.data
data/glint_example/: g_land.config
data/simple_glide/: sigma.data  simple1.config  simple2.config  simple3.config
data/tests/: test_config.conf
doc/: Makefile  Makefile.am  class_diagram.eps  class_diagram.sxd  code_overview.tex  dg.tex  dg_pdf.tex  dg_ps.tex  glimmer.bib  glimmer.tex  glimmer.tex.in  glimmer_html.tex  glimmer_pdf.tex  glimmer_ps.tex  make_doc.rules  num.tex  num_ps.tex  tg.tex  tg_pdf.tex  tg_ps.tex  ug.tex  ug_pdf.tex  ug_ps.tex  user_doc.tex
doc/common/: Makefile.am  definitions.tex  packages.tex  version.tex.in
doc/dg/: Makefile.am  dg.tex  netcdf.tex  physics.tex
doc/dg/figures/: Makefile.am  class_diagram.dia  data_dep.dot
doc/num/: Makefile  Makefile.am  basal_bc.tex  grid.tex  gthf.tex  isos.tex  kinematics.tex  num.tex  temp.tex  vert_velo.tex
doc/num/figs/: Makefile  Makefile.am  thick_evo.eps
doc/num/gnu/: Makefile  Makefile.am  w_profile.gp
doc/ug/: Makefile  Makefile.am  drivers.tex  example.tex  glide.tex  glide_api.tex  glimmer_api.tex  glint.tex  glint_api.tex  glum_api.tex  installation.tex  intro.tex  mbals.tex  nc_conf.tex  paramfiles.tex  ug.tex  varlist.tex  varlist.tex.in  visualisation.tex
doc/ug/figs/: Makefile.am  glide.dia  glide.eps  glimmer.dia
example/: ChangeLog  Makefile  README  example.config  example.f90
lib/: README
m4macros/: Makefile.am  glimmer.m4  netcdf.m4
mod/: README
src/: Makefile.am
src/fortran/: ChangeLog  Makefile  Makefile.am  awi.f  bin2ncdf.F90  bin2ncdf.f90  constants.F90  eis_cony.F90  eis_cony.f90  eis_ela.F90  eis_ela.f90  eis_forcing.F90  eis_forcing.f90  eis_glide.F90  eis_glide.f90  eis_io.f90.in  eis_slc.F90  eis_slc.f90  eis_temp.F90  eis_temp.f90  eis_types.F90  eis_types.f90  eis_vars.def  eismint3_forcing.F90  eismint3_forcing.f90  eismint3_glide.F90  eismint3_glide.f90  eismint3_types.F90  eismint3_types.f90  eismint3_vars.def  exit_mod.F90  fo_upwind_advect.F90  glam.F90  glam_strs2.F90  glam_thck_ppm.F90  glex_ebm.F90  glex_ebm.f90  glex_ebm_clim.F90  glex_ebm_clim.f90  glide.F90  (+259 more)
src/fortran/SLAP_library/: Makefile.am  makefile  xersla.f
src/fortran/smb_config/: offline  online
src/fortran/smb_data/: drainzone.txt  grelev20.txt  grmask20.txt
src/matlab/: blah0dn.m  blahcord.m  blahdata.m  blahhead.m  blahopen.m  blahsize.m  blahskip.m  forcebal.m  glim0d.m  glim2d.m  glim3d.m  mag.m  pmp.m  stag.m  tpcont.m  tpdata.m  tphead.m  tpskip.m  tpsq.m  tpsurf.m  ustag.m
src/python/: Makefile  Makefile.am  cvs_version.py  f90_dependencies.py  fort_interp.py  fort_parser.py  generate_ncvars.py  glide_launch.py  glimmer_profile.py  make_restarts.py  qsub_glide.sh
tests/: Makefile.am  e2.adi.config  e2.lin.config  e2.nonlin.config  e2.rmp.config
tests/ISMIP-HOM/: Makefile  README  changeDomainSize.py  createVisuals.py  formatData.py  glimcdf.py  intercomparison.py  ishom.a.config  ishom.a.evol.config  ishom.b.config  ishom.c.config  ishom.d.config  ishom.f.config  ismip_hom_a.py  ismip_hom_b.py  ismip_hom_c.py  ismip_hom_d.py  ismip_hom_f.py  refinement.py  regression.py  verify.py
tests/ho-other/: README  glimcdf.py  hump-diag.config  hump.config  hump.py
tests/ross/: dataset.f  inputfile.f  makerossnc.py  plotRoss.py  readme.txt  riggs_data.txt  ross-regrid.config  ross.config  rossVerify.py  visco.ross
tests/shelf/: README  circular-shelf.config  circular-shelf.levels  circular-shelf.py  compare-exact.py  confined-shelf.config  confined-shelf.py  ice-tongue.py  square-shelf.py  unconfined-shelf.config
